# WhiteBeltStepik

./: .gitignore  CMakeLists.txt  main.cpp
1/: decimal_to_binary.cpp  even_number.cpp  factorial.cpp  good_cost.cpp  min_line.cpp  nod.cpp  palindrom.cpp  quadratic_equation.cpp  quadratic_equation_solution.cpp  second_input.cpp
anagrams/: CMakeLists.txt  anagrams.cpp
average_temperature/: CMakeLists.txt  average_temperature.h  test.cpp
bus_stops_1/: CMakeLists.txt  bus_stops.cpp
bus_stops_2/: CMakeLists.txt  bus_stops2.cpp
bus_stops_3/: CMakeLists.txt  bus_stops3.cpp  bus_stops3_solution.cpp
calculator/: CMakeLists.txt  calculator.cpp  calculator_solution.cpp
capitals_catalog/: CMakeLists.txt  capitals_catalog.cpp  capitals_catalog_solution.cpp
devide/: CMakeLists.txt  devide.cpp
ensure_equal/: CMakeLists.txt  ensure_equal.cpp
files1/: CMakeLists.txt  files1 solution.cpp  files1.cpp  files1_solution.cpp
files2/: CMakeLists.txt  files2 solution.cpp  files2.cpp
final/: CMakeLists.txt  final.cpp  final_solution.cpp
function/: CMakeLists.txt  function.cpp
function2/: CMakeLists.txt  function2.cpp
initialization/: CMakeLists.txt  initialization.cpp
lecture_title/: CMakeLists.txt  lecture_title.cpp  lecture_title_solution.cpp
map_value_set/: CMakeLists.txt  build_map_value_set.cpp  solution.cpp
maximizer/: CMakeLists.txt  maximizer.h  test.cpp
monthly_affairs/: CMakeLists.txt  monthly_affairs.cpp  monthly_cases_solution.cpp
move_strings/: CMakeLists.txt  move_strings.h  move_strings_solution.cpp  test.cpp
names_1/: CMakeLists.txt  names1.cpp  names_1_solution.cpp
names_2/: CMakeLists.txt  names2.cpp  names2_solution.cpp
names_3/: CMakeLists.txt  names3.cpp  names3_solution.cpp
polindrome/: CMakeLists.txt  polindrome.cpp
precision_output/: CMakeLists.txt  precision_output.cpp
query/: CMakeLists.txt  query.h  query_solution.cpp  test.cpp
rational1/: CMakeLists.txt  rational1.cpp  rational1_solution.cpp
rational2/: CMakeLists.txt  rational2.cpp  rational2_solution.cpp
rational3/: CMakeLists.txt  rational3.cpp  rational3_solution.cpp
rational4/: CMakeLists.txt  rational4.cpp  rational4_solution.cpp
rational5/: CMakeLists.txt  rational5.cpp  rational5_solution.cpp
rational_exeption/: CMakeLists.txt  rational_exeption.cpp
reverse/: CMakeLists.txt  reverse.h  test.cpp
reverse_2/: CMakeLists.txt  reverse_2_solution.cpp  reversed.h  test.cpp
reversible_string/: CMakeLists.txt  reversible_string.cpp  reversible_string_solution.cpp
sinonims/: CMakeLists.txt  sinonims.cpp
sort_by_module/: CMakeLists.txt  sort_by_module.cpp  sort_by_module_solution.cpp
sort_strings/: CMakeLists.txt  sort_strings.cpp
sort_without_register/: CMakeLists.txt  sort_wreg.cpp
students_list/: CMakeLists.txt  students_list.cpp  students_list_solution.cpp
table/: CMakeLists.txt  table.cpp
time_server/: CMakeLists.txt  time_server.cpp
unique_string_count/: CMakeLists.txt  unique_string.cpp
