cmake_minimum_required(VERSION 3.8)

project(WhiteBeltStepik)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

add_subdirectory(polindrome)
add_subdirectory(devide)
add_subdirectory(maximizer)
add_subdirectory(move_strings)
add_subdirectory(reverse)
add_subdirectory(reverse_2)
add_subdirectory(average_temperature)
add_subdirectory(query)
add_subdirectory(monthly_affairs)
add_subdirectory(anagrams)
add_subdirectory(capitals_catalog)
add_subdirectory(bus_stops_1)
add_subdirectory(bus_stops_2)
add_subdirectory(unique_string_count)
add_subdirectory(map_value_set)
add_subdirectory(sinonims)